[tool.poetry]
name = "automatic-time-series-prediction"
version = "0.1.0"
description = ""
authors = ["York West <york@alphafundai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "*"
pandas = "*"
seaborn = "*"
numpy = "*"
scikit-learn = "*"
yfinance = "*"
pymc = "*"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
